# mini4ev-pro

./: .gitignore  README.md  low_latency_script.sh  para-config.yaml  start.sh  steering-cmd-demo.sh
install/: local_setup.sh  setup.sh
install/test-com-package/lib/test-com-package/: dual-nodes
install/test-com-package/share/ament_index/resource_index/package_run_dependencies/: test-com-package
install/test-com-package/share/ament_index/resource_index/parent_prefix_path/: test-com-package
install/test-com-package/share/test-com-package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/test-com-package/share/test-com-package/cmake/: test-com-packageConfig-version.cmake  test-com-packageConfig.cmake
install/test-com-package/share/test-com-package/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
rules/: 99-ch344q.rules  99-imu.rules  99-teensy.rules  rules.md
src/: .gitignore
src/battery_state_py/: package.xml  setup.cfg  setup.py
src/battery_state_py/battery_state_py/: publisher_member_function.py  subscriber_member_function.py
src/battery_state_py/launch/: battery.launch.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: BasicCommand.msg  DrivingCommand.msg  DrivingMotors.msg  MotorState.msg  SteeringAngle.msg  SteeringMotors.msg
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/microstrain_inertial/microstrain_inertial_driver/config/: empty.yml
src/sbus_bridge/: README.md
src/sbus_bridge/config/: params.yaml
src/sbus_bridge/include/sbus_bridge/: sbus_serial_driver.h
src/sbus_bridge/src/: sbus_bridge_node.cpp  sbus_serial_driver.cpp  serial_test.c
src/serial_imu/: CMakeLists.txt  package.xml
src/serial_imu/launch/: imu_spec_msg.launch.py
src/serial_imu/src/: serial_port.cpp
src/servo_rs485_py/: README.md  package.xml  setup.cfg  setup.py
src/servo_rs485_py/servo_rs485_py/: servo_rs485.py
src/steering-node/: CMakeLists.txt  package.xml
src/steering-node/include/steering-node/: dm4310.hpp
src/steering-node/msg/: SteeringMotorFeedback.msg
src/steering-node/src/: demo_4_thread_comm.cpp  disable  disable_motor.cpp  enable  pub-and-sub-function.cpp  steering_feedback-pub.cpp  test1  test_Pos_control  test_arm64  test_inital  test_self.cpp  threads  zero  zero_arm64
src/steering_motors/: CMakeLists.txt  README.md  package.xml
src/steering_motors_package/: CMakeLists.txt  package.xml
src/steering_motors_package/include/steering_motors_package/: can_opration.hpp  dm4310.hpp
src/steering_motors_package/reference/: enable_motor.cpp  set_zero_motor.cpp  test_two_thread.cpp
src/steering_motors_package/src/: steering_controller.cpp  steering_publisher.cpp
src/test-com-package/: CMakeLists.txt
src/test-com-package-with-custom-msg/: CMakeLists.txt  package.xml
src/test-com-package-with-custom-msg/src/: pub-sub-function-with-msg.cpp  steering-cmd.cpp  steering-with-sbus.cpp  steering-with_userinput.cpp
src/test-com-package/src/: dual-nodes.cpp  pub-sub-function.cpp
steering-motor-opration/: disable_steering_motor  enable_steering_motor  setzero_steering_motor
